ARC-3579: Ensure truncation of labels in the blade

--- a/src/modules/account/components/MaterialRequestStatusPill/MaterialRequestStatusPill.module.scss
+++ b/src/modules/account/components/MaterialRequestStatusPill/MaterialRequestStatusPill.module.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	min-width: 0;
 
 	&__pill{
 		height: 3rem;
